add lastest dev version

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-.idea
-.idea/*
-code
-code/*
-reports
-reports/*
-tools
-tools/*
-deploy
-deploy/*
-tmp
-tmp/*
+/.idea
+/reports
+/tools
+/deploy
+/tmp
+/www
+/build/properties/default.prop
