set new build.xml support cdn and memcache

--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,8 @@
   <import file="${struct.build.submodules}/selenium/build.xml"/>
   <import file="${struct.build.submodules}/solr/build.xml"/>
   <import file="${struct.build.submodules}/db/build.xml"/>
+  <import file="${struct.build.submodules}/memcache/build.xml"/>
+  <import file="${struct.build.submodules}/cdn/build.xml"/>
 
 
   <target name="install" depends="clear" description="Install site">
