--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-/.idea
+._*
+.DS_Store
+._.DS_Store
+.project
+*.sublime-workspace
+.externalToolBuilders
+/custom/modules/examples/
+*.sass-cache
+.buildpath
 /reports
 /tools
-/deploy
-/tmp
-/www
 /build/properties/default.prop
+*.sublime-project
+/tmp
+.settings
+/www
+/deploy
+.idea
+resources/logs/*
